# subflow

./: .gitignore  CHANGELOG.md  LICENSE  README.md  SUBFLOW_SPEC.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
scripts/: release.sh
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: binary_manager.rs  config.rs  error.rs  lib.rs  main.rs  model_manager.rs
src-tauri/src/commands/: mod.rs  queue_cmd.rs  settings_cmd.rs  translate_cmd.rs  tts_cmd.rs  youtube_cmd.rs
src-tauri/src/queue/: mod.rs  orchestrator.rs  task.rs  types.rs
src-tauri/src/source/: generic.rs  mod.rs  provider.rs  youtube.rs
src-tauri/src/subtitle/: parser.rs  types.rs  writer.rs
src-tauri/src/translate/: chunker.rs  claude.rs  deepl.rs  gemini.rs  glm.rs  libretranslate.rs  mod.rs  nllb.rs  nllb_native.rs  openai.rs  provider.rs
src-tauri/src/tts/: edge.rs  mod.rs  openai_tts.rs  provider.rs  types.rs
src-tauri/src/youtube/: downloader.rs  metadata.rs  mod.rs  subtitle_fetcher.rs
src/components/config/: ProcessingConfig.tsx
src/components/empty-state/: DropZone.tsx
src/components/layout/: AppShell.tsx  BottomToolbar.tsx  LogPanel.tsx
src/components/queue/: QueueView.tsx  TaskCard.tsx
src/components/settings/: SettingsPanel.tsx
src/hooks/: useDropZone.ts  useTaskEvents.ts  useUpdateChecker.ts
src/i18n/: index.ts
src/lib/: constants.ts  tauri.ts  types.ts
src/stores/: useSettingsStore.ts  useTaskStore.ts  useUiStore.ts
(+15 files in other folders)
