[package]
name = "subflow"
version = "0.3.1"
description = "SubFlow - Subtitle Translation Studio"
authors = ["SubFlow"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "subflow_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream", "cookies"] }
anyhow = "1"
thiserror = "2"
regex = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
msedge-tts = "0.2"
dirs = "6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
ct2rs = { version = "0.9", features = ["sentencepiece"], optional = true }
futures-util = "0.3"
openssl = { version = "0.10", features = ["vendored"], optional = true }

[features]
default = ["nllb-native"]
nllb-native = ["ct2rs"]
vendored-openssl = ["openssl"]
